--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -102,28 +102,31 @@ ul {
 li {
   display: inline-block;
   background-color: #69D1C5;
+  margin-left: -4px;
 }
-/* line 60, ../sass/screen.scss */
+/* line 61, ../sass/screen.scss */
 li a {
   display: inline-block;
   color: white;
   font-family: "Roboto", sans-serif;
-  padding-left: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0;
 }
 
-/* line 68, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 li:first-of-type {
   background-color: #00CC99;
 }
 
-/* line 72, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 78, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -132,19 +135,19 @@ h1 {
   font-size: 10em;
 }
 
-/* line 87, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 91, ../sass/screen.scss */
+/* line 94, ../sass/screen.scss */
 #logo {
   float: left;
   color: white;
   font-size: 40px;
 }
 
-/* line 99, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -154,34 +157,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 109, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 113, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 121, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 128, ../sass/screen.scss */
+/* line 131, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 132, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -191,7 +194,7 @@ a {
   z-index: 100;
 }
 
-/* line 145, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -214,49 +217,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 168, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 172, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 180, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 185, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 190, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 195, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 200, ../sass/screen.scss */
+/* line 203, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 205, ../sass/screen.scss */
+/* line 208, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
