--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -31,11 +31,12 @@ header {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	height: 40px;
+	height: 50px;
 	z-index: 3000;
 	background: rgba(black, 0.3);
 	border-bottom: 1px solid rgba(black, 0.2);
 	background: $yellow;
+	line-height: 50px;
 }
 
 nav {
@@ -49,7 +50,7 @@ nav {
 ul {
 	list-style: none;
 	float: right;
-	line-height: 40px;
+	line-height: 50px;
 	background: $pink;
 	height: 100%;
 }
@@ -58,18 +59,19 @@ li {
 	display: inline-block;
 	background-color: $teal;
 	margin-left: -4px;
+	margin-right: 10px;
 	a {
 		display: inline-block;
 		color: white;
 		font-family: $roboto;
-		padding-left: 20px;
-		padding-right: 20px;
+		padding-left: 15px;
+		padding-right: 15px;
 		margin: 0;
 	}
 }
 
-li:first-of-type {
-	background-color: $green;
+li:last-of-type {
+	margin-right: 0;
 }
 
 section {
@@ -92,6 +94,7 @@ a {
 }
 
 #logo {
+	margin-top: 5px;
 	float: left;
 	//position: absolute;
 	//left: 0;
