--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -73,14 +73,15 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 40px;
+  height: 50px;
   z-index: 3000;
   background: rgba(0, 0, 0, 0.3);
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   background: #FFEE88;
+  line-height: 50px;
 }
 
-/* line 41, ../sass/screen.scss */
+/* line 42, ../sass/screen.scss */
 nav {
   position: absolute;
   width: 80%;
@@ -89,44 +90,45 @@ nav {
   background: #8DE4FF;
 }
 
-/* line 49, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 ul {
   list-style: none;
   float: right;
-  line-height: 40px;
+  line-height: 50px;
   background: #EE92C2;
   height: 100%;
 }
 
-/* line 57, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 li {
   display: inline-block;
   background-color: #69D1C5;
   margin-left: -4px;
+  margin-right: 10px;
 }
-/* line 61, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 li a {
   display: inline-block;
   color: white;
   font-family: "Roboto", sans-serif;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 0;
 }
 
-/* line 71, ../sass/screen.scss */
-li:first-of-type {
-  background-color: #00CC99;
+/* line 73, ../sass/screen.scss */
+li:last-of-type {
+  margin-right: 0;
 }
 
-/* line 75, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 81, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -135,19 +137,20 @@ h1 {
   font-size: 10em;
 }
 
-/* line 90, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 94, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 #logo {
+  margin-top: 5px;
   float: left;
   color: white;
   font-size: 40px;
 }
 
-/* line 102, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -157,34 +160,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 112, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 116, ../sass/screen.scss */
+/* line 119, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 120, ../sass/screen.scss */
+/* line 123, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 124, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 131, ../sass/screen.scss */
+/* line 134, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 135, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -194,7 +197,7 @@ a {
   z-index: 100;
 }
 
-/* line 148, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -217,49 +220,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 171, ../sass/screen.scss */
+/* line 174, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 175, ../sass/screen.scss */
+/* line 178, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 183, ../sass/screen.scss */
+/* line 186, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 188, ../sass/screen.scss */
+/* line 191, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 193, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 198, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 203, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 208, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
