--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -77,11 +77,10 @@ header {
   z-index: 3000;
   background: rgba(0, 0, 0, 0.3);
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  background: #FFEE88;
   line-height: 50px;
 }
 
-/* line 42, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 nav {
   position: absolute;
   width: 80%;
@@ -90,7 +89,7 @@ nav {
   background: #8DE4FF;
 }
 
-/* line 50, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 ul {
   list-style: none;
   float: right;
@@ -99,14 +98,14 @@ ul {
   height: 100%;
 }
 
-/* line 58, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 li {
   display: inline-block;
   background-color: #69D1C5;
   margin-left: -4px;
   margin-right: 10px;
 }
-/* line 63, ../sass/screen.scss */
+/* line 62, ../sass/screen.scss */
 li a {
   display: inline-block;
   color: white;
@@ -114,21 +113,22 @@ li a {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0;
+  background-color: #6A7FDB;
 }
 
-/* line 73, ../sass/screen.scss */
+/* line 74, ../sass/screen.scss */
 li:last-of-type {
   margin-right: 0;
 }
 
-/* line 77, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 83, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -137,12 +137,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 92, ../sass/screen.scss */
+/* line 93, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 96, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 #logo {
   margin-top: 5px;
   float: left;
@@ -150,7 +150,7 @@ a {
   font-size: 40px;
 }
 
-/* line 105, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -160,34 +160,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 115, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 119, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 123, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 127, ../sass/screen.scss */
+/* line 128, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 134, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 138, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -197,7 +197,7 @@ a {
   z-index: 100;
 }
 
-/* line 151, ../sass/screen.scss */
+/* line 152, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -220,49 +220,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 174, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 178, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 186, ../sass/screen.scss */
+/* line 187, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 191, ../sass/screen.scss */
+/* line 192, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 196, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 201, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 206, ../sass/screen.scss */
+/* line 207, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 211, ../sass/screen.scss */
+/* line 212, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
