Content sections now have the proper left-hand margin.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -88,7 +88,7 @@ section {
 h1 {
 	position: absolute;
 	bottom: 0.25em;
-	left: 0.25em;
+	left: 10%;
 	font-family: $raleway;
 	font-size: 10em;
 }
