--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -136,7 +136,7 @@ section {
 h1 {
   position: absolute;
   bottom: 0.25em;
-  left: 0.25em;
+  left: 10%;
   font-family: "Raleway", sans-serif;
   font-size: 10em;
 }
