--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -18,9 +18,7 @@ $blue: #8DE4FF;
 $dark-blue: #67A6BA;
 
 // Fonts
-$lato: 'Lato', sans-serif;
 $raleway: 'Raleway', sans-serif;
-$open-sans: 'Open Sans', sans-serif;
 $roboto: 'Roboto', sans-serif;
 
 html, body {
@@ -32,45 +30,42 @@ header {
 	top: 0;
 	width: 100%;
 	height: 50px;
+	line-height: 50px;
 	z-index: 3000;
 	background: rgba(black, 0.3);
 	border-bottom: 1px solid rgba(black, 0.2);
-	line-height: 50px;
 }
 
 nav {
 	position: absolute;
 	width: 80%;
-	left: 10%;
 	height: 100%;
+	left: 10%;
 	//background: $blue;
 }
 
 ul {
-	list-style: none;
 	float: right;
-	line-height: 50px;
 	//background: $pink;
-	height: 100%;
 }
 
 li {
 	display: inline-block;
-	//background-color: $teal;
 	margin-left: -4px;
-	//margin-right: 10px;
+	//background-color: $teal;
+
 	a {
 		display: inline-block;
 		color: white;
 		font-family: $roboto;
-		padding-left: 15px;
-		padding-right: 15px;
-		//background-color: $purple;
+		padding-left: 20px;
+		padding-right: 20px;
 		transition: 0.2s;
+		//background-color: $purple;
 	}
 
 	a:hover{
-		background-color: rgba(white, 0.1);
+		background: rgba(white, 0.1);
 		transition: 0.2s;
 	}
 
