Smooth scrolling works now because of one css line. However, a polyfill is needed for anything other than Chrome or Firefox.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -23,6 +23,8 @@ $roboto: 'Roboto', sans-serif;
 
 html, body {
 	height: 100%;
+	// This works native on Chrome and Firefox.
+	scroll-behavior: smooth;
 }
 
 header {
