--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -66,9 +66,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* line 24, ../sass/screen.scss */
 html, body {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
-/* line 28, ../sass/screen.scss */
+/* line 30, ../sass/screen.scss */
 header {
   position: fixed;
   top: 0;
@@ -80,7 +81,7 @@ header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-/* line 39, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 nav {
   position: absolute;
   width: 80%;
@@ -88,17 +89,17 @@ nav {
   left: 10%;
 }
 
-/* line 47, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 ul {
   float: right;
 }
 
-/* line 52, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 li {
   display: inline-block;
   margin-left: -4px;
 }
-/* line 57, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 li a {
   display: inline-block;
   height: 100%;
@@ -108,20 +109,20 @@ li a {
   padding-right: 20px;
   transition: 0.2s;
 }
-/* line 68, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 li a:hover {
   background: rgba(255, 255, 255, 0.1);
   transition: 0.2s;
 }
 
-/* line 76, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 82, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -130,12 +131,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 91, ../sass/screen.scss */
+/* line 93, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 95, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 #logo {
   margin-top: 5px;
   float: left;
@@ -143,7 +144,7 @@ a {
   font-size: 40px;
 }
 
-/* line 104, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -153,34 +154,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 114, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 118, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 122, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 126, ../sass/screen.scss */
+/* line 128, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 133, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 137, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -190,7 +191,7 @@ a {
   z-index: 100;
 }
 
-/* line 150, ../sass/screen.scss */
+/* line 152, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -213,49 +214,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 173, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 177, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 185, ../sass/screen.scss */
+/* line 187, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 190, ../sass/screen.scss */
+/* line 192, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 195, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 200, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 205, ../sass/screen.scss */
+/* line 207, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 210, ../sass/screen.scss */
+/* line 212, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
