--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -82,6 +82,12 @@ header {
 }
 
 /* line 41, ../sass/screen.scss */
+.hide {
+  background: transparent;
+  transition: 0.2s;
+}
+
+/* line 46, ../sass/screen.scss */
 nav {
   position: absolute;
   width: 80%;
@@ -89,17 +95,17 @@ nav {
   left: 10%;
 }
 
-/* line 49, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 ul {
   float: right;
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 li {
   display: inline-block;
   margin-left: -4px;
 }
-/* line 59, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 li a {
   display: inline-block;
   color: white;
@@ -108,21 +114,21 @@ li a {
   padding-right: 20px;
   transition: 0.2s;
 }
-/* line 69, ../sass/screen.scss */
+/* line 74, ../sass/screen.scss */
 li a:hover {
   background: rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 -2px 0 white;
   transition: 0.2s;
 }
 
-/* line 78, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 84, ../sass/screen.scss */
+/* line 89, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -131,12 +137,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 93, ../sass/screen.scss */
+/* line 98, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 #logo {
   margin-top: 5px;
   float: left;
@@ -144,7 +150,7 @@ a {
   font-size: 40px;
 }
 
-/* line 106, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -154,34 +160,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 116, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 120, ../sass/screen.scss */
+/* line 125, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 124, ../sass/screen.scss */
+/* line 129, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 128, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 135, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 139, ../sass/screen.scss */
+/* line 144, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -191,7 +197,7 @@ a {
   z-index: 100;
 }
 
-/* line 152, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -214,49 +220,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 175, ../sass/screen.scss */
+/* line 180, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 179, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 187, ../sass/screen.scss */
+/* line 192, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 192, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 197, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 202, ../sass/screen.scss */
+/* line 207, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 207, ../sass/screen.scss */
+/* line 212, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 212, ../sass/screen.scss */
+/* line 217, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
