--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -82,12 +82,17 @@ header {
 }
 
 /* line 41, ../sass/screen.scss */
+#test {
+  transition: 0.2s;
+}
+
+/* line 45, ../sass/screen.scss */
 .hide {
   background: transparent;
   transition: 0.2s;
 }
 
-/* line 46, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 nav {
   position: absolute;
   width: 80%;
@@ -95,17 +100,17 @@ nav {
   left: 10%;
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 ul {
   float: right;
 }
 
-/* line 59, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 li {
   display: inline-block;
   margin-left: -4px;
 }
-/* line 64, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 li a {
   display: inline-block;
   color: white;
@@ -114,21 +119,21 @@ li a {
   padding-right: 20px;
   transition: 0.2s;
 }
-/* line 74, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 li a:hover {
   background: rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 -2px 0 white;
   transition: 0.2s;
 }
 
-/* line 83, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 93, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -137,12 +142,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 98, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 102, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 #logo {
   margin-top: 5px;
   float: left;
@@ -150,7 +155,7 @@ a {
   font-size: 40px;
 }
 
-/* line 111, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -160,34 +165,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 121, ../sass/screen.scss */
+/* line 125, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 125, ../sass/screen.scss */
+/* line 129, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 129, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 133, ../sass/screen.scss */
+/* line 137, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 140, ../sass/screen.scss */
+/* line 144, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 144, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -197,7 +202,7 @@ a {
   z-index: 100;
 }
 
-/* line 157, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -220,49 +225,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 180, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 184, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 192, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 197, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 202, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 207, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 212, ../sass/screen.scss */
+/* line 216, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 217, ../sass/screen.scss */
+/* line 221, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
