--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -65,21 +65,25 @@ li {
 	display: inline-block;
 	margin-left: -4px;
 	//background-color: $teal;
+	margin-right: 10px;
 
 	a {
-		display: inline-block;
+		display: inline;
 		color: white;
 		font-family: $roboto;
 		padding-left: 20px;
+		padding-top: 5px;
+		padding-bottom: 5px;
 		padding-right: 20px;
 		transition: 0.2s;
 		//background-color: $purple;
+		border-radius: 5px;
 	}
 
 	a:hover{
-		background: rgba(white, 0.1);
-		box-shadow: inset 0 -2px 0 white;
+		background: white;
 		transition: 0.2s;
+		color: black;
 	}
 
 }
