--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -110,31 +110,35 @@ ul {
 li {
   display: inline-block;
   margin-left: -4px;
+  margin-right: 10px;
 }
-/* line 69, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 li a {
-  display: inline-block;
+  display: inline;
   color: white;
   font-family: "Roboto", sans-serif;
   padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   padding-right: 20px;
   transition: 0.2s;
+  border-radius: 5px;
 }
-/* line 79, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 li a:hover {
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0 -2px 0 white;
+  background: white;
   transition: 0.2s;
+  color: black;
 }
 
-/* line 88, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 94, ../sass/screen.scss */
+/* line 98, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -143,12 +147,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 103, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 107, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 #logo {
   margin-top: 5px;
   float: left;
@@ -156,7 +160,7 @@ a {
   font-size: 40px;
 }
 
-/* line 116, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -166,34 +170,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 126, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 130, ../sass/screen.scss */
+/* line 134, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 134, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 138, ../sass/screen.scss */
+/* line 142, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 145, ../sass/screen.scss */
+/* line 149, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 149, ../sass/screen.scss */
+/* line 153, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -203,7 +207,7 @@ a {
   z-index: 100;
 }
 
-/* line 162, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -226,49 +230,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 185, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 189, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 197, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 202, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 207, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 212, ../sass/screen.scss */
+/* line 216, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 217, ../sass/screen.scss */
+/* line 221, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 222, ../sass/screen.scss */
+/* line 226, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
