The nav avtive system works on the '4K' button. Let's see if we can set it up to do more.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -27,6 +27,11 @@ html, body {
 	scroll-behavior: smooth;
 }
 
+.active {
+	background: white;
+	color: black;
+}
+
 header {
 	position: fixed;
 	top: 0;
