--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -70,6 +70,12 @@ html, body {
 }
 
 /* line 30, ../sass/screen.scss */
+.active {
+  background: white;
+  color: black;
+}
+
+/* line 35, ../sass/screen.scss */
 header {
   position: fixed;
   top: 0;
@@ -81,19 +87,19 @@ header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-/* line 41, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
 #test {
   transition: 0.2s;
 }
 
-/* line 45, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 .hide {
   background: transparent;
   border-bottom: 1px solid transparent;
   transition: 0.2s;
 }
 
-/* line 51, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 nav {
   position: absolute;
   width: 80%;
@@ -101,18 +107,18 @@ nav {
   left: 10%;
 }
 
-/* line 59, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 ul {
   float: right;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 69, ../sass/screen.scss */
 li {
   display: inline-block;
   margin-left: -4px;
   margin-right: 10px;
 }
-/* line 70, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 li a {
   display: inline;
   color: white;
@@ -124,21 +130,21 @@ li a {
   transition: 0.2s;
   border-radius: 5px;
 }
-/* line 83, ../sass/screen.scss */
+/* line 88, ../sass/screen.scss */
 li a:hover {
   background: white;
   transition: 0.2s;
   color: black;
 }
 
-/* line 92, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 98, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -147,12 +153,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 107, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 111, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 #logo {
   margin-top: 5px;
   float: left;
@@ -160,7 +166,7 @@ a {
   font-size: 40px;
 }
 
-/* line 120, ../sass/screen.scss */
+/* line 125, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -170,34 +176,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 130, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 134, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 138, ../sass/screen.scss */
+/* line 143, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 142, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 149, ../sass/screen.scss */
+/* line 154, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 153, ../sass/screen.scss */
+/* line 158, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -207,7 +213,7 @@ a {
   z-index: 100;
 }
 
-/* line 166, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -230,49 +236,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 189, ../sass/screen.scss */
+/* line 194, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 193, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 201, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 206, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 211, ../sass/screen.scss */
+/* line 216, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 216, ../sass/screen.scss */
+/* line 221, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 221, ../sass/screen.scss */
+/* line 226, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 226, ../sass/screen.scss */
+/* line 231, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
