The font on the nav now changes color.

--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -137,14 +137,19 @@ li a:hover {
   color: black;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
+.black {
+  color: black;
+}
+
+/* line 101, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 103, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -153,12 +158,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 112, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 116, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
 #logo {
   margin-top: 5px;
   float: left;
@@ -166,7 +171,7 @@ a {
   font-size: 40px;
 }
 
-/* line 125, ../sass/screen.scss */
+/* line 129, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -176,34 +181,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 135, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 139, ../sass/screen.scss */
+/* line 143, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 143, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 147, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 154, ../sass/screen.scss */
+/* line 158, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 158, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -213,7 +218,7 @@ a {
   z-index: 100;
 }
 
-/* line 171, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -236,49 +241,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 194, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 198, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 206, ../sass/screen.scss */
+/* line 210, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 211, ../sass/screen.scss */
+/* line 215, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 216, ../sass/screen.scss */
+/* line 220, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 221, ../sass/screen.scss */
+/* line 225, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 226, ../sass/screen.scss */
+/* line 230, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 231, ../sass/screen.scss */
+/* line 235, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
